--- a/src/Q3/Prog52aFarm.form
+++ b/src/Q3/Prog52aFarm.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="630" height="445"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-10521"/>
+      <foreground color="-7701"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="3bae2" class="javax.swing.JButton" binding="btnClear">
@@ -13,15 +16,10 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-2371841"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1311233"/>
           <text value="Clear"/>
-        </properties>
-      </component>
-      <component id="38a00" class="javax.swing.JLabel" binding="Length">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Length:"/>
         </properties>
       </component>
       <component id="62f06" class="javax.swing.JLabel" binding="Width">
@@ -29,6 +27,10 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1311233"/>
+          <enabled value="true"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1"/>
           <text value="Width:"/>
         </properties>
       </component>
@@ -37,14 +39,21 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1246977"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1"/>
           <text value="Area:"/>
         </properties>
       </component>
-      <component id="6621c" class="javax.swing.JButton" binding="btnCalc">
+      <component id="6621c" class="javax.swing.JButton" binding="btnCalc" custom-create="true">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-2371841"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1246977"/>
+          <hideActionText value="false"/>
           <text value="Calculate"/>
         </properties>
       </component>
@@ -54,7 +63,10 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2371841"/>
+          <foreground color="-3689985"/>
+        </properties>
       </component>
       <component id="e715a" class="javax.swing.JTextField" binding="txtWid">
         <constraints>
@@ -62,14 +74,30 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2965249"/>
+        </properties>
       </component>
       <component id="cb47f" class="javax.swing.JLabel" binding="Perimeter">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1246977"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1"/>
           <text value="Perimeter:"/>
+        </properties>
+      </component>
+      <component id="38a00" class="javax.swing.JLabel" binding="Length">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1246465"/>
+          <font name="Blackadder ITC" size="22" style="0"/>
+          <foreground color="-1"/>
+          <text value="Length:"/>
         </properties>
       </component>
     </children>
