--- a/src/Q4/VirtualPetLab/MainForm.form
+++ b/src/Q4/VirtualPetLab/MainForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="543" height="400"/>
+      <xy x="56" y="51" width="742" height="400"/>
     </constraints>
     <properties>
       <background color="-2371841"/>
@@ -50,14 +50,40 @@
           <text value="Adopt a Cat"/>
         </properties>
       </component>
-      <component id="84c1f" class="javax.swing.JButton" binding="sleepButton" default-binding="true">
+      <component id="155dc" class="javax.swing.JButton" binding="sleepButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="78" height="99"/>
-          </grid>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Sleep"/>
+        </properties>
+      </component>
+      <component id="574b1" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model/>
+        </properties>
+      </component>
+      <component id="dc8e5" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1246465"/>
+          <foreground color="-1311233"/>
+          <text value="picture"/>
+        </properties>
+      </component>
+      <component id="2bae1" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1311233"/>
+          <foreground color="-1311233"/>
+          <text value="stats"/>
         </properties>
       </component>
     </children>
