--- a/src/Q4/VirtualPetLab/MainForm.form
+++ b/src/Q4/VirtualPetLab/MainForm.form
@@ -66,7 +66,7 @@
           <model/>
         </properties>
       </component>
-      <component id="dc8e5" class="javax.swing.JLabel">
+      <component id="dc8e5" class="javax.swing.JLabel" binding="pictureLabel">
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -76,7 +76,7 @@
           <text value="picture"/>
         </properties>
       </component>
-      <component id="2bae1" class="javax.swing.JLabel">
+      <component id="2bae1" class="javax.swing.JLabel" binding="statsLabel">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
